--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -53,7 +53,7 @@
       <HintPath>..\..\Tingen_development\src\packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
     <Reference Include="System.Text.Json, Version=8.0.0.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\..\Tingen_development\src\packages\System.Text.Json.8.0.3\lib\net462\System.Text.Json.dll</HintPath>
+      <HintPath>..\..\TingenDevelopment\src\packages\System.Text.Json.8.0.3\lib\net462\System.Text.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\Tingen_development\src\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -69,8 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Avatar\AvatarData.cs" />
-    <Compile Include="Core\Avatar\AvatarData.Properties.cs" />
+    <Compile Include="Core\Avatar\AvatarComponents.cs" />
+    <Compile Include="Core\Avatar\AvatarComponents.Properties.cs" />
     <Compile Include="Core\Common\ParseScriptModule.cs" />
     <Compile Include="Core\Configuration\TingenConfiguration.Properties.cs" />
     <Compile Include="Core\Configuration\TingenConfiguration.cs" />
