--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -72,10 +72,13 @@
     <Compile Include="Core\Avatar\DataFromAvatar.cs" />
     <Compile Include="Core\Avatar\DataFromAvatar.Properties.cs" />
     <Compile Include="Core\Avatar\TheOptionObject.cs" />
+    <Compile Include="Core\Logger\Catalog.cs" />
+    <Compile Include="Core\Logger\TraceLog.Properties.cs" />
+    <Compile Include="Core\Logger\TraceLog.cs" />
     <Compile Include="Core\Roundhouse.cs" />
     <Compile Include="Core\Configuration\TingenConfiguration.Properties.cs" />
     <Compile Include="Core\Configuration\TingenConfiguration.cs" />
-    <Compile Include="Core\Debuggler\PrimevalLog.cs" />
+    <Compile Include="Core\Logger\PrimevalLog.cs" />
     <Compile Include="Core\Framework\Catalog.cs" />
     <Compile Include="Core\Framework\Maintenance.cs" />
     <Compile Include="Core\Framework\TingenFramework.Properties.cs" />
@@ -92,6 +95,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Core\Debuggler\" />
     <Folder Include="Core\Exporter\" />
     <Folder Include="Core\Importer\" />
     <Folder Include="Core\Messenger\" />
