--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -71,26 +71,26 @@
   <ItemGroup>
     <Compile Include="Core\Avatar\AvatarData.cs" />
     <Compile Include="Core\Avatar\OptionObjects.cs" />
-    <Compile Include="Core\Framework\DataRoots.cs" />
-    <Compile Include="Core\Framework\OtherPaths.cs" />
-    <Compile Include="Core\Framework\PublicPaths.cs" />
-    <Compile Include="Core\Framework\RemotePaths.cs" />
-    <Compile Include="Core\Framework\SystemCodePaths.cs" />
+    <Compile Include="Core\Framework\Catalog\SystemCodePaths.cs" />
+    <Compile Include="Core\Framework\Catalog\PublicPaths.cs" />
+    <Compile Include="Core\Framework\Catalog\RemotePaths.cs" />
+    <Compile Include="Core\Framework\Catalog\TingenPaths.cs" />
     <Compile Include="Core\Logger\LoggerCatalog.cs" />
     <Compile Include="Core\Logger\TraceLog.cs" />
     <Compile Include="Core\Roundhouse.cs" />
-    <Compile Include="Core\Configuration\TingenConfig.cs" />
+    <Compile Include="Core\Configuration\ConfigSettings.cs" />
     <Compile Include="Core\Logger\PrimevalLog.cs" />
-    <Compile Include="Core\Framework\FrameworkCatalog.cs" />
     <Compile Include="Core\Framework\Maintenance.cs" />
-    <Compile Include="Core\Framework\TingenFramework.cs" />
+    <Compile Include="Core\Framework\Paths.cs" />
     <Compile Include="Core\Logger\LogEvent.cs" />
     <Compile Include="Core\Session\Catalog.cs" />
     <Compile Include="Core\Session\TingenSession.cs" />
     <Compile Include="Core\Utilities\DuJson.cs" />
-    <Compile Include="Module\Admin\Service.cs" />
+    <Compile Include="Module\Admin\Framework\Verify.cs" />
+    <Compile Include="Module\Admin\Service\Status.cs" />
     <Compile Include="Module\FormComponent\Field.cs" />
-    <Compile Include="Module\OpenIncident\VerifyAuthor.cs" />
+    <Compile Include="Module\OpenIncident\ModuleOpenIncident.cs" />
+    <Compile Include="Module\OpenIncident\Verify.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WelcomeToOutpost31.cs" />
   </ItemGroup>
