--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\TingenApp.cs" />
     <Compile Include="Core\Avatar\AvatarData.cs" />
     <Compile Include="Core\Avatar\OptionObjects.cs" />
     <Compile Include="Core\Framework\Catalog\SystemCodePaths.cs" />
@@ -78,7 +79,7 @@
     <Compile Include="Core\Framework\Refresh.cs" />
     <Compile Include="Core\Logger\LoggerCatalog.cs" />
     <Compile Include="Core\Logger\TraceLog.cs" />
-    <Compile Include="Core\Roundhouse.cs" />
+    <Compile Include="Core\ParseScriptParameter.cs" />
     <Compile Include="Core\Configuration\ConfigSettings.cs" />
     <Compile Include="Core\Logger\PrimevalLog.cs" />
     <Compile Include="Core\Framework\Maintenance.cs" />
@@ -86,8 +87,6 @@
     <Compile Include="Core\Logger\LogEvent.cs" />
     <Compile Include="Core\Session\Catalog.cs" />
     <Compile Include="Core\Session\TingenSession.cs" />
-    <Compile Include="Core\Start.cs" />
-    <Compile Include="Core\Stop.cs" />
     <Compile Include="Core\Utilities\DuJson.cs" />
     <Compile Include="Module\Admin\Framework\Verify.cs" />
     <Compile Include="Module\Admin\Service\Status.cs" />
