--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\NtstWebService\NtstWebServiceSecurity.cs" />
+    <Compile Include="Core\NtstWebService\UserManagement.cs" />
     <Compile Include="Core\TingenApp.cs" />
     <Compile Include="Core\Avatar\AvatarData.cs" />
     <Compile Include="Core\Avatar\OptionObjects.cs" />
@@ -93,7 +95,8 @@
     <Compile Include="Module\Admin\Service\Status.cs" />
     <Compile Include="Module\FormComponent\Field.cs" />
     <Compile Include="Module\OpenIncident\ModuleOpenIncident.cs" />
-    <Compile Include="Module\OpenIncident\Verify.cs" />
+    <Compile Include="Module\OpenIncident\OnSubmit\Verify.cs" />
+    <Compile Include="Module\Testing\NtstWebService\OnSubmit\UserMgmt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WelcomeToOutpost31.cs" />
   </ItemGroup>
@@ -102,10 +105,8 @@
     <Folder Include="Core\Exporter\" />
     <Folder Include="Core\Importer\" />
     <Folder Include="Core\Messenger\" />
-    <Folder Include="Core\NtstWebServices\" />
     <Folder Include="Core\Parser\" />
     <Folder Include="Module\Common\" />
-    <Folder Include="Module\Testing\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -116,6 +117,13 @@
       <Project>{6f7baf8a-9a54-4da8-94a9-202e5f25c52d}</Project>
       <Name>ScriptLinkStandard</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\TingenNetsmartServices\src\TingenNetsmartServices.csproj">
+      <Project>{0cb51e9f-6295-47c2-afcf-116a0adf9012}</Project>
+      <Name>TingenNetsmartServices</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
