--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -70,7 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\NtstWebService\NtstWebServiceSecurity.cs" />
-    <Compile Include="Core\NtstWebService\UserManagement.cs" />
     <Compile Include="Core\TingenApp.cs" />
     <Compile Include="Core\Avatar\AvatarData.cs" />
     <Compile Include="Core\Avatar\OptionObjects.cs" />
@@ -89,14 +88,14 @@
     <Compile Include="Core\Logger\LogEvent.cs" />
     <Compile Include="Core\Session\Catalog.cs" />
     <Compile Include="Core\Session\TingenSession.cs" />
+    <Compile Include="Core\Utilities\DuFile.cs" />
     <Compile Include="Core\Utilities\DuJson.cs" />
     <Compile Include="Module\Admin\Export\OptionObject.cs" />
-    <Compile Include="Module\Admin\Framework\Verify.cs" />
+    <Compile Include="Module\Admin\Framework\Refresh.cs" />
     <Compile Include="Module\Admin\Service\Status.cs" />
     <Compile Include="Module\FormComponent\Field.cs" />
     <Compile Include="Module\OpenIncident\ModuleOpenIncident.cs" />
-    <Compile Include="Module\OpenIncident\OnSubmit\Verify.cs" />
-    <Compile Include="Module\Testing\NtstWebService\UserMgmt.cs" />
+    <Compile Include="Module\OpenIncident\Verify.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WelcomeToOutpost31.cs" />
   </ItemGroup>
@@ -107,23 +106,20 @@
     <Folder Include="Core\Messenger\" />
     <Folder Include="Core\Parser\" />
     <Folder Include="Module\Common\" />
+    <Folder Include="Module\Testing\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tingen.ThirdParty\ScriptLinkStandard\ScriptLinkStandard.csproj">
-      <Project>{6f7baf8a-9a54-4da8-94a9-202e5f25c52d}</Project>
-      <Name>ScriptLinkStandard</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\TingenNetsmartServices\src\TingenNetsmartServices.csproj">
-      <Project>{0cb51e9f-6295-47c2-afcf-116a0adf9012}</Project>
-      <Name>TingenNetsmartServices</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
+    <ProjectReference Include="..\..\Tingen-ThirdParty\ScriptLinkStandard\ScriptLinkStandard.csproj">
+      <Project>{1cc89ac0-0c32-441b-972d-d6f2396ef9e0}</Project>
+      <Name>ScriptLinkStandard</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
