--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -53,7 +53,7 @@
       <HintPath>..\..\Tingen_development\src\packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
     <Reference Include="System.Text.Json, Version=8.0.0.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\..\TingenDevelopment\src\packages\System.Text.Json.8.0.3\lib\net462\System.Text.Json.dll</HintPath>
+      <HintPath>..\..\Tingen-Development\src\packages\System.Text.Json.8.0.3\lib\net462\System.Text.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\Tingen_development\src\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -72,7 +72,7 @@
     <Compile Include="Core\NtstWebService\NtstWebServiceSecurity.cs" />
     <Compile Include="Core\TingenApp.cs" />
     <Compile Include="Core\Avatar\AvatarData.cs" />
-    <Compile Include="Core\Avatar\FormatReturnObject.cs" />
+    <Compile Include="Core\Avatar\ReturnObject.cs" />
     <Compile Include="Core\Framework\Catalog\SystemCodePaths.cs" />
     <Compile Include="Core\Framework\Catalog\PublicPaths.cs" />
     <Compile Include="Core\Framework\Catalog\RemotePaths.cs" />
