--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -117,5 +117,8 @@
       <Name>ScriptLinkStandard</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="XMLDoc\Common.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
