--- a/src/Outpost31.csproj
+++ b/src/Outpost31.csproj
@@ -105,7 +105,8 @@
     <Folder Include="Module\Testing\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="XmlDoc\Common_doc.xml" />
+    <Content Include="XmlDoc\Outpost31.Welcome_doc.xml" />
+    <Content Include="XmlDoc\Outpost31-Common_doc.xml" />
     <Content Include="XmlDoc\Outpost31.Core.Configuration_doc.xml" />
     <Content Include="XmlDoc\Outpost31.Core.Avatar_doc.xml" />
     <Content Include="XmlDoc\Outpost31.Core.Framework_doc.xml" />
